logs/2023-04-04-Extension-Host-Did-Not-Connect.txt
Name: Failed to start extension host: Extension host did not connect
Url: https://github.com/lvce-editor/lvce-editor/actions/runs/4348585195/jobs/7597289158
OS: Windows
Phase: Unit-Tests (Shared Process)
Date: 2023-04-04

Summary of all failing tests
 FAIL  test/InstallExtension.test.js (6.347 s)
  ● install should fail when the server sends an invalid compressed object

    thrown: "Exceeded timeout of 5000 ms for a test.
    Add a timeout value to this test to increase the timeout, if this is a long-running test. See https://jestjs.io/docs/api#testname-fn-timeout."

      167 | })
      168 |
    > 169 | test('install should fail when the server sends an invalid compressed object', async () => {
          | ^
      170 |   const tmpDir1 = await getTmpDir()
      171 |   const tmpDir2 = await getTmpDir()
      172 |   const tmpDir3 = await getTmpDir()

      at test (test/InstallExtension.test.js:169:1)

 FAIL  test/ExtensionHost.test.js (7.09 s)
  ● start - error - syntax error

    expect(received).rejects.toThrowError(expected)

    Expected message: "Failed to start extension host: Extension Host exited with code 1"
    Received message: "Failed to start extension host: Extension host did not connect"

          60 |     const handleTimeout = () => {
          61 |       cleanup()
        > 62 |       reject(new VError('Extension host did not connect'))
             |              ^
          63 |     }
          64 |     const timeout = Timeout.setTimeout(handleTimeout, CONNECTION_TIMEOUT)
          65 |     ipc.on('error', handleFirstError)

          at Timeout.handleTimeout (src/parts/ExtensionHostRpc/ExtensionHostRpc.js:62:14)

       96 |   }
       97 |   // TODO error message should include stderr of extension host: SyntaxError: Unexpected end of input
    >  98 |   await expect(ExtensionHost.start(socket)).rejects.toThrowError(
          |                                                     ^
       99 |     new Error(
      100 |       'Failed to start extension host: Extension Host exited with code 1'
      101 |     )

      at Object.toThrowError (../../node_modules/expect/build/index.js:210:22)
      at Object.toThrowError (test/ExtensionHost.test.js:98:53)
